--- a/styles.css
+++ b/styles.css
@@ -2,20 +2,46 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;600&display=swap');
 p {
     font-size: 25px;
+    font-weight: 300;
+}
+
+h2 {
     font-weight: 400;
 }
 
+h3 {
+    font-weight: 200;
+}
+
+h4 {
+    font-weight: 100;
+}
+
 body{
-    margin: 0px;
+    margin: auto;
     font-family: "Poppins";
 }
 .container {
-    width: auto;
-    display: block;
-    margin: auto;
-    padding-right: 20px;
-    padding-left: 20px;
+    padding: 0px 20px;
+    margin: 0% 5%;
     z-index: 0;
+}
+
+.big-section {
+    padding: 30px;
+    margin: 30px 40px;
+}
+
+.subsection {
+    padding: 0px 30px;
+    margin: 0px 30px;
+    display: flex;
+    flex-direction: row;
+}
+
+.small-section {
+    width: 50%;
+    margin: 30px 2rem;
 }
 
 .blink {
@@ -59,6 +85,7 @@ body{
     animation-fill-mode: forwards;
     animation-timing-function:linear;
     animation-iteration-count: infinite;
+    transition: all 0.3s ease-out;
 }
 
 @keyframes rotation {
@@ -75,7 +102,7 @@ body{
     position: fixed;
     top: 0px;
     text-align: right;
-    backdrop-filter: blur(10px);
+    backdrop-filter: blur(7px);
     z-index: 1;
 }   
 .nav-bar h1 {
@@ -84,17 +111,15 @@ body{
     margin: 10px;
     font-size: 25px;
     color: #000;
+    transition: all 0.3s ease-out;
 }
 
 
 /* Note : Title to change color in horizontal direction */
 .nav-bar h1:hover{
-    position: relative;
-    left: 1px;
-    bottom: 1px;
     color: #04AA6D;
-    text-shadow: -1px 3px 5px rgba(128,128,128, 0.5);
 }
+
 
 .links {
     margin: auto;
@@ -123,28 +148,21 @@ body{
     text-align: center;
 }
 
-.sections {
-    display: flex;
-    justify-content: space-between;
-    flex-wrap:inherit;
-    flex-direction: row;
-    padding: 30px;
-    margin: auto;
+.footer-text h1 {
+    font-weight: 600; 
+    font-family: monospace; 
+    margin: 0px;
 }
 
-.subsections {
-    margin: 10px;
-    padding: 30px;
-    width: 50%;
 
-}
 .headings {
-    font-size: 50px;
+    font-size: 60px;
     text-shadow: -15px 15px rgba(128,128,128, 0.2);
     font-weight: 600;
+    margin-bottom: 10px;
 }
 
-.subsections:hover .headings{
+.big-section:hover .headings{
     text-shadow: -15px 15px rgba(4, 170, 109, 0.2);
 }
 .icon-box {
@@ -155,6 +173,7 @@ body{
     border-radius: 5px;
     text-align: center;
     margin: 10px;
+    transition: all 500ms ease-in-out;
 }
 
 
@@ -166,6 +185,7 @@ body{
 ul {
     list-style-type: none;
     display: flex;
+    flex-wrap: wrap;
 }
 
 .icon-pic {
@@ -180,16 +200,51 @@ button{
     border-radius: 5px;
     width: auto;
     text-align: center;
+    transition: all 400ms ease-in-out;
 }
-button:hover, .icon-box:hover {
+
+button:hover {
     position: relative;
     left: 3px;
     bottom: 3px;
     box-shadow: -5px 5px rgba(128,128,128, 0.3);
     background: #04AA6D;
-    }
-    
+}
+
+.icon-box:hover {
+    position: relative;
+    bottom: 2px;
+    box-shadow: 0px 5px 15px #04AA6D;
+}
+
 button:active {
     transform: translate3d(-2px, 2px, 2px);
     box-shadow: none
+}
+
+.project {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    margin: 10px;
+    width: 33%;
+    height: auto;
+    padding: 5%;
+    border: 1px groove gray;
+    align-items: center;
+    border-radius: 5px;
+    transition: all 500ms ease-in-out;
+}
+
+.project:hover {
+    box-shadow: 0px 5px 20px #04AA6D;
+}
+
+.tech li {
+    background-color: rgba(160,160,160,0.1);
+    padding: 10px;
+    margin: 5px;
+    text-align: center;
+    border: 1px groove rgba(128,128,128,0.5);
+    border-radius: 20px;
 }
