--- a/styles-dark.css
+++ b/styles-dark.css
@@ -1,5 +1,8 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;600&display=swap');
+p, h1, h2, h3, h4, h5, h6, a {
+    color: white;
+}
 p {
     font-size: 25px;
     font-weight: 300;
@@ -20,6 +23,7 @@ h4 {
 body{
     margin: auto;
     font-family: "Poppins";
+    background-color: #000;
 }
 .container {
     display: flex;
@@ -93,7 +97,7 @@ body{
     
 }
 .down:hover, #home:hover, .drpbtn:hover {
-    filter: invert(41%) sepia(94%) saturate(1636%) hue-rotate(129deg) brightness(92%) contrast(97%);
+    filter: invert(11%) sepia(86%) saturate(6639%) hue-rotate(1deg) brightness(118%) contrast(115%);
 }
 
 .nav-bar {
@@ -109,7 +113,7 @@ body{
     display: inline-block;
     margin: 10px;
     font-size: 25px;
-    color: #000;
+    color: #FFF;
     transition: all 0.3s ease-out;
 }
 
@@ -119,7 +123,7 @@ body{
     position: relative;
     left: 1px;
     bottom: 1px;
-    color: #04AA6D;
+    color: #FF0000;
 }
 
 
@@ -203,7 +207,7 @@ ul {
 button{
     font-size: 30px;
     background: white;
-    border: 2px solid #04AA6D;
+    border: 2px solid #FF0000;
     border-radius: 5px;
     width: auto;
     text-align: center;
@@ -212,7 +216,7 @@ button{
 
 button:hover{
     box-shadow: -5px 5px rgba(128,128,128, 0.3);
-    background: #04AA6D;
+    background: #FF0000;
     position: relative;
     left: 3px;
     bottom: 3px;
@@ -221,7 +225,7 @@ button:hover{
 .icon-box:hover {
     position: relative;
     bottom: 1px;
-    box-shadow: 0px 5px 15px #04AA6D;
+    box-shadow: 0px 5px 15px #FF0000;
 }
 
 button:active {
@@ -247,7 +251,7 @@ button:active {
     justify-content: center;
 }
 .project:hover {
-    box-shadow: 0px 5px 15px #04AA6D;
+    box-shadow: 0px 5px 15px #FF0000;
 }
 .tech li {
     background-color: rgba(160,160,160,0.1);
