--- a/styles-dark.css
+++ b/styles-dark.css
@@ -21,27 +21,28 @@ h4 {
 }
 
 body{
+    transition: 500ms ease-in-out;
     margin: auto;
     font-family: "Poppins";
-    background-color: #000;
+    background-color: #333;
 }
 .container {
     display: flex;
     flex-direction: column;
-    margin: 0% 5%;
+    margin: 0px;
     z-index: 0;
 }
 
 .big-section {
     padding: 5px;
-    margin: 3rem 2rem;
+    margin: 3rem 3rem;
 }
 
 .subsection {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    margin: 0px 2rem;
+    margin: 0px 1rem;
     justify-content: space-between;
 }
 
@@ -96,10 +97,14 @@ body{
     }
     
 }
-.down:hover, #home:hover, .drpbtn:hover {
-    filter: invert(11%) sepia(86%) saturate(6639%) hue-rotate(1deg) brightness(118%) contrast(115%);
+.down:hover, #home:hover, .drpbtn:hover, .links img:hover, .project img:hover {
+    filter: invert(89%) sepia(57%) saturate(1730%) hue-rotate(359deg) brightness(109%) contrast(102%);
 }
 
+.links img:hover, .project a:hover {
+    transition: all 200ms ease-in-out;
+    transform: scale(1.1);
+}
 .nav-bar {
     width: 100%;
     position: fixed;
@@ -112,7 +117,7 @@ body{
     font-weight: 400;
     display: inline-block;
     margin: 10px;
-    font-size: 25px;
+    font-size: 1.5rem;
     color: #FFF;
     transition: all 0.3s ease-out;
 }
@@ -123,7 +128,7 @@ body{
     position: relative;
     left: 1px;
     bottom: 1px;
-    color: #FF0000;
+    color: #FFCC00;
 }
 
 
@@ -131,17 +136,13 @@ body{
     margin: auto;
 }
 
-.links a{
+.links img{
     display: flex;
     margin: 15px; 
-    padding: 0px;
     width: 40px;
     height: 40px;
 }
 
-.links img:hover, .project a:hover {
-    transform: scale(1.1);
-}
 
 .landing, .footer {
     display: flex;
@@ -157,32 +158,33 @@ body{
     text-align: center;
 }
 
-.footer-text h1 {
+.footer-text h1, .landing-text h1 {
     font-weight: 600; 
     font-family: monospace; 
-    margin: 0px;
 }
+
 
 .headings {
     font-size: 60px;
     text-shadow: -15px 15px rgba(128,128,128, 0.2);
     font-weight: 600;
     margin-bottom: 10px;
+    transition: all 200ms ease-in-out;
 }
 
 .big-section:hover .headings{
-    text-shadow: -15px 15px rgba(4, 170, 109, 0.2);
+    text-shadow: -15px 15px rgba(255, 255, 0, 0.1);
 }
 
 .icon-box {
     display:inline-flex;
     height: 50px;
     width: 150px;
-    border: 1px groove rgba(128,128,128,0.5);
+    border: 1px groove rgb(255,255,255);
     border-radius: 5px;
     text-align: center;
     margin: 10px;
-    transition: all 500ms ease-in-out;
+    transition: all 400ms ease-in-out;
 }
 
 
@@ -206,8 +208,9 @@ ul {
 
 button{
     font-size: 30px;
-    background: white;
-    border: 2px solid #FF0000;
+    background: transparent;
+    color: white;
+    border: 2px solid #FFCC00;
     border-radius: 5px;
     width: auto;
     text-align: center;
@@ -215,17 +218,18 @@ button{
 }
 
 button:hover{
-    box-shadow: -5px 5px rgba(128,128,128, 0.3);
-    background: #FF0000;
+    background: #FFCC00;
     position: relative;
     left: 3px;
     bottom: 3px;
+    box-shadow: -5px 5px rgba(255,255,255, 0.5);
 }
 
 .icon-box:hover {
     position: relative;
-    bottom: 1px;
-    box-shadow: 0px 5px 15px #FF0000;
+    left: 3px;
+    bottom: 3px;
+    box-shadow: -5px 5px #FFCC00;
 }
 
 button:active {
@@ -241,7 +245,7 @@ button:active {
     flex: 1 1 0;
     margin: 10px;
     padding: 20px;
-    border: 1px groove gray;
+    border: 1px groove white;
     text-align: center;
     border-radius: 5px;
     transition: all 500ms ease-in-out;
@@ -251,17 +255,36 @@ button:active {
     justify-content: center;
 }
 .project:hover {
-    box-shadow: 0px 5px 15px #FF0000;
+    position: relative;
+    left: 3px;
+    bottom: 3px;
+    box-shadow: -7px 7px #FFCC00;
 }
 .tech li {
-    background-color: rgba(160,160,160,0.1);
+    background-color: rgb(255,255,255, 0.3);
     padding: 10px;
     margin: 5px;
-    border: 1px groove rgba(128,128,128,0.5);
+    border: 1px groove rgb(255,255,255, 0.3);
     border-radius: 20px;
     transition: all 500ms ease-in-out;
 }
 
 .tech li:hover {
-    background-color: rgba(160, 160, 160, 0.3   );
+    background-color: rgba(150, 150, 150, 1);
 }
+
+.night {
+    position: fixed;
+    padding: 5px;
+    top: 90%;
+    left: 95%;
+    background-color: rgba(255, 255, 0,0.2);
+    border-radius: 50px;
+    transition: all 500ms ease-in-out;
+}
+
+.night:hover {
+    background-color: #FFCC00;
+
+}
+
