--- a/styles.css
+++ b/styles.css
@@ -18,26 +18,27 @@ h4 {
 }
 
 body{
+    transition: 500ms ease-in-out;
     margin: auto;
     font-family: "Poppins";
 }
 .container {
     display: flex;
     flex-direction: column;
-    margin: 0% 5%;
+    margin: 0px;
     z-index: 0;
 }
 
 .big-section {
     padding: 5px;
-    margin: 3rem 2rem;
+    margin: 3rem 3rem;
 }
 
 .subsection {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    margin: 0px 2rem;
+    margin: 0px 1rem;
     justify-content: space-between;
 }
 
@@ -92,8 +93,14 @@ body{
     }
     
 }
-.down:hover, #home:hover, .drpbtn:hover {
+.down:hover, #home:hover, .drpbtn:hover, .links img:hover, .project img:hover {
     filter: invert(41%) sepia(94%) saturate(1636%) hue-rotate(129deg) brightness(92%) contrast(97%);
+}
+
+
+.links img:hover, .project a:hover {
+    transition: all 300ms ease-in-out;
+    transform: scale(1.1);
 }
 
 .nav-bar {
@@ -127,16 +134,13 @@ body{
     margin: auto;
 }
 
-.links a{
+.links img{
     display: flex;
     margin: 15px; 
     padding: 0px;
     width: 40px;
     height: 40px;
-}
-
-.links img:hover, .project a:hover {
-    transform: scale(1.1);
+    transition: all 200ms ease-in-out;
 }
 
 .landing, .footer {
@@ -148,15 +152,14 @@ body{
 
 .landing-text, .footer-text {
     width: auto;
-    font-size: 2rem;
+    font-size: 40px;
     margin: 0px;
     text-align: center;
 }
 
-.footer-text h1 {
+.footer-text h1, .landing-text h1 {
     font-weight: 600; 
     font-family: monospace; 
-    margin: 0px;
 }
 
 .headings {
@@ -164,6 +167,7 @@ body{
     text-shadow: -15px 15px rgba(128,128,128, 0.2);
     font-weight: 600;
     margin-bottom: 10px;
+    transition: all 300ms ease-in-out;
 }
 
 .big-section:hover .headings{
@@ -207,7 +211,7 @@ button{
     border-radius: 5px;
     width: auto;
     text-align: center;
-    transition: all 400ms ease-in-out;
+    transition: all 500ms ease-in-out;
 }
 
 button:hover{
@@ -220,8 +224,9 @@ button:hover{
 
 .icon-box:hover {
     position: relative;
-    bottom: 1px;
-    box-shadow: 0px 5px 15px #04AA6D;
+    left: 3px;
+    bottom: 3px;
+    box-shadow:     -5px 5px #04AA6D;
 }
 
 button:active {
@@ -232,9 +237,8 @@ button:active {
 .project {
     display: flex;
     flex-direction: column;
-    flex-wrap: wrap;
+    flex: 1 1 0;
     width: auto;
-    flex: 1 2 0;
     margin: 10px;
     padding: 20px;
     border: 1px groove gray;
@@ -242,12 +246,12 @@ button:active {
     border-radius: 5px;
     transition: all 500ms ease-in-out;
 }
-.project a {
-    display: flex;
-    justify-content: center;
-}
+
 .project:hover {
-    box-shadow: 0px 5px 15px #04AA6D;
+    position: relative;
+    left: 3px;
+    bottom: 3px;
+    box-shadow: -7px 7px #04AA6D;
 }
 .tech li {
     background-color: rgba(160,160,160,0.1);
@@ -259,5 +263,19 @@ button:active {
 }
 
 .tech li:hover {
-    background-color: rgba(160, 160, 160, 0.3   );
+    background-color: rgba(160, 160, 160, 0.3);
+}
+
+.night {
+    position: fixed;
+    padding: 5px;
+    top: 90%;
+    left: 95%;
+    border-radius: 50px;
+    background-color: rgba(0, 0, 255, 0.5);
+    transition: all 500ms ease-in-out;
+}
+
+.night:hover {
+    background-color: rgba(0, 0, 255, 1);
 }
