--- a/styles-dark.css
+++ b/styles-dark.css
@@ -24,7 +24,7 @@ body{
     transition: 500ms ease-in-out;
     margin: auto;
     font-family: "Poppins";
-    background-color: #111;
+    background-color: #333;
 }
 .container {
     display: flex;
@@ -43,7 +43,7 @@ body{
     flex-direction: row;
     flex-wrap: wrap;
     margin: 0px 1rem;
-    justify-content: space-between;
+    justify-content: space-around;
 }
 
 .small-section {
@@ -97,7 +97,8 @@ body{
     }
     
 }
-.down:hover, #home:hover, .drpbtn:hover, .links img:hover, .project img:hover {
+.down:hover, #home:hover, .drpbtn:hover, .links img:hover, .project img:hover, .icon-box:hover .icon-pic {
+    transition: all 500ms ease-in-out;  
     filter: invert(89%) sepia(67%) saturate(1730%) hue-rotate(359deg) brightness(109%) contrast(102%);
 }
 
@@ -236,21 +237,6 @@ button:active {
     box-shadow: none
 }
 
-.project {
-    display: flex;
-    flex-direction: column;
-    width: auto;
-    flex: 1 1 0;
-    margin: 10px;
-    padding: 20px;
-    border: 1px solid white;
-    text-align: center;
-    border-radius: 5px;
-    transition: all 750ms ease-in-out;
-}
-.project:hover {
-    border: 1px solid rgba(255, 204, 0, 1);
-}
 .tech li {
     background-color: rgb(150,150,150, 0.5);
     padding: 5px 10px;
@@ -278,3 +264,44 @@ button:active {
     background-color: #FFCC00;
 }
 
+.card, .face, .data {
+    margin: 1rem;
+    height: 300px;
+    width: 400px;
+    transition: all 0.5s ease-in-out;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.face, .data {
+    position: absolute;
+}
+
+.face {
+    border: 1px solid white;
+    background-color: #333;
+    border-radius: 5px;
+    z-index: 1;
+    font: 1em monospace;
+}
+
+.data {
+    height: auto;
+    display: flex;
+    background-color: #333;
+    z-index: 0;
+    font: 15px sans-serif;
+    flex-direction: column;
+}
+
+.card:hover .face{
+    border: 1px solid rgba(255, 204, 0, 1);;
+    transform: translateY(-125px);
+    height: 50px;
+}
+
+.card:hover .data {
+    transform: translateY(25px);
+}
