--- a/styles.css
+++ b/styles.css
@@ -39,7 +39,7 @@ body{
     flex-direction: row;
     flex-wrap: wrap;
     margin: 0px 1rem;
-    justify-content: space-between;
+    justify-content: space-around;
 }
 
 .small-section {
@@ -93,7 +93,8 @@ body{
     }
     
 }
-.down:hover, #home:hover, .drpbtn:hover, .links img:hover, .project img:hover {
+.down:hover, #home:hover, .drpbtn:hover, .links img:hover, .data img:hover, .icon-box:hover .icon-pic {
+    transition: all 500ms ease-in-out;  
     filter: invert(41%) sepia(94%) saturate(1636%) hue-rotate(129deg) brightness(92%) contrast(97%);
 }
 
@@ -273,4 +274,48 @@ button:active {
 
 .night:hover {
     background-color: rgba(0, 0, 255, 1);
+}
+
+.card, .face, .data {
+    margin: 1rem;
+    height: 300px;
+    width: 400px;
+    transition: all 0.5s ease-in-out;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.face, .data {
+    position: absolute;
+}
+
+.face {
+    border: 1px solid rgba(150,150,150,0.5);
+    background-color: white;
+    border-radius: 5px;
+    z-index: 1;
+    font: 1em monospace;
+}
+
+.data {
+    height: auto;
+    display: flex;
+    flex-wrap: wrap;
+    background-color: white;
+    z-index: 0;
+    font: 15px sans-serif;
+    flex-direction: column;
+}
+
+.card:hover .face{
+    border: 1px solid rgba(4, 200, 109, 1);
+    transform: translateY(-125px);
+    height: 50px;
+}
+
+.card:hover .data {
+    transform: translateY(20px);
+
 }
