--- a/styles-dark.css
+++ b/styles-dark.css
@@ -10,6 +10,7 @@ p {
 
 h2 {
     font-weight: 400;
+    margin: 0%;
 }
 
 h3 {
@@ -97,13 +98,12 @@ body{
     }
     
 }
-.down:hover, #home:hover, .drpbtn:hover, .links img:hover, .project img:hover, .icon-box:hover .icon-pic {
+.down:hover, #home:hover, .drpbtn:hover, .links img:hover, .card img:hover, .icon-box:hover .icon-pic {
     transition: all 500ms ease-in-out;  
     filter: invert(89%) sepia(67%) saturate(1730%) hue-rotate(359deg) brightness(109%) contrast(102%);
 }
 
 .links img:hover, .project a:hover {
-    transition: all 300ms ease-in-out;
     transform: scale(1.1);
 }
 .nav-bar {
@@ -112,7 +112,7 @@ body{
     top: 0px;
     text-align: right;
     backdrop-filter: blur(7px);
-    z-index: 1;
+    z-index: 2;
 }   
 .nav-bar h1 {
     font-weight: 400;
@@ -166,14 +166,14 @@ body{
 
 .headings {
     font-size: 3rem;
-    text-shadow: -15px 15px rgba(128,128,128, 0.2);
+    text-shadow: -10px 10px rgba(128,128,128, 0.2);
     font-weight: 600;
     margin-bottom: 10px;
     transition: all 300ms ease-in-out;
 }
 
 .big-section:hover .headings{
-    text-shadow: -15px 15px rgba(255, 255, 0, 0.1);
+    text-shadow: -12px 12px rgba(255, 255, 0, 0.1);
 }
 
 .icon-box {
@@ -253,8 +253,8 @@ button:active {
 .night {
     position: fixed;
     padding: 5px;
-    top: 90%;
-    left: 95%;
+    bottom: 30px;
+    right: 30px;
     background-color: rgba(255, 255, 0,0.2);
     border-radius: 50px;
     transition: all 500ms ease-in-out;
@@ -263,16 +263,18 @@ button:active {
 .night:hover {
     background-color: #FFCC00;
 }
-
+.card {
+    flex: 1 1 auto;
+    margin: 1rem 10px;
+}
 .card, .face, .data {
-    margin: 1rem;
     height: 300px;
     width: 400px;
-    transition: all 0.5s ease-in-out;
-    text-align: center;
     display: flex;
+    text-align: center;
     justify-content: center;
     align-items: center;
+    transition: all 0.5s ease-in-out;
 }
 
 .face, .data {
@@ -288,20 +290,21 @@ button:active {
 }
 
 .data {
-    height: auto;
     display: flex;
-    background-color: #333;
+    flex-direction: column;
+    justify-content: flex-start;
+    backdrop-filter: blur(10px);
     z-index: 0;
     font: 15px sans-serif;
-    flex-direction: column;
+    border-radius: 5px;
 }
 
 .card:hover .face{
+    height: 60px;
+    transform: translateY(-120px);
     border: 1px solid rgba(255, 204, 0, 1);;
-    transform: translateY(-125px);
-    height: 50px;
 }
 
 .card:hover .data {
-    transform: translateY(25px);
+    transform: translateY(65px);
 }
