--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,7 @@ p {
 
 h2 {
     font-weight: 400;
+    margin: 0%;
 }
 
 h3 {
@@ -100,7 +101,6 @@ body{
 
 
 .links img:hover, .project a:hover {
-    transition: all 300ms ease-in-out;
     transform: scale(1.1);
 }
 
@@ -110,7 +110,7 @@ body{
     top: 0px;
     text-align: right;
     backdrop-filter: blur(7px);
-    z-index: 1;
+    z-index: 2;
 }   
 .nav-bar h1 {
     font-weight: 400;
@@ -162,14 +162,14 @@ body{
 
 .headings {
     font-size: 3rem;
-    text-shadow: -15px 15px rgba(128,128,128, 0.2);
+    text-shadow: -10px 10px rgba(128,128,128, 0.2);
     font-weight: 600;
     margin-bottom: 10px;
     transition: all 300ms ease-in-out;
 }
 
 .big-section:hover .headings{
-    text-shadow: -15px 15px rgba(4, 170, 109, 0.2);
+    text-shadow: -12px 12px rgba(4, 170, 109, 0.2);
 }
 
 .icon-box {
@@ -265,8 +265,8 @@ button:active {
     margin: auto;
     position: fixed;
     padding: 5px;
-    top: 90%;
-    left: 95%;
+    bottom: 30px;
+    right: 30px;
     border-radius: 50px;
     background-color: rgba(0, 0, 255, 0.5);
     transition: all 500ms ease-in-out;
@@ -275,18 +275,19 @@ button:active {
 .night:hover {
     background-color: rgba(0, 0, 255, 1);
 }
-
+.card {
+    flex: 1 1 auto;
+    margin: 1rem 10px;
+}
 .card, .face, .data {
-    margin: 1rem;
     height: 300px;
     width: 400px;
-    transition: all 0.5s ease-in-out;
-    text-align: center;
     display: flex;
+    text-align: center;
     justify-content: center;
     align-items: center;
+    transition: all 0.5s ease-in-out;
 }
-
 .face, .data {
     position: absolute;
 }
@@ -300,22 +301,21 @@ button:active {
 }
 
 .data {
-    height: auto;
     display: flex;
-    flex-wrap: wrap;
-    background-color: white;
+    flex-direction: column;
+    justify-content: flex-start;
+    backdrop-filter: blur(10px);
     z-index: 0;
     font: 15px sans-serif;
-    flex-direction: column;
+    border-radius: 5px;
 }
 
 .card:hover .face{
+    height: 60px;
+    transform: translateY(-120px);
     border: 1px solid rgba(4, 200, 109, 1);
-    transform: translateY(-125px);
-    height: 50px;
 }
 
 .card:hover .data {
-    transform: translateY(20px);
-
+    transform: translateY(65px);
 }
